--- a/backend/package.json
+++ b/backend/package.json
@@ -1,5 +1,7 @@
 {
   "dependencies": {
+    "@tensorflow-models/universal-sentence-encoder": "^1.3.3",
+    "@tensorflow/tfjs-node": "^3.7.0",
     "axios": "^1.3.4",
     "bcrypt": "^5.1.0",
     "dotenv": "^16.0.3",
